Fixed website display on small-width desktop browsers.

--- a/src/app/project_display_styles.css
+++ b/src/app/project_display_styles.css
@@ -69,6 +69,9 @@ ul {
     margin-left: 3em;
     margin-bottom: 2em;
 
+    width: 100%;
+    max-width: 300px;
+
     display: flex;
     flex-direction: column;
 }
@@ -85,14 +88,17 @@ ul {
 
 }
 
-#display_links {
-
+.display_links {
+    width: 100%;
+    height: 200px;
+    max-width: 300px;
 }
 
 .display_outref {
     height: 75px;
-    width: 300px;
     margin-bottom: 12px;
+
+    width: 100%;
 
     background-image: url("../assets/dark_sharp_edges.png");
 
@@ -105,27 +111,27 @@ ul {
     padding-left: 20px;
 }
 
-#display_gallery {
+.display_gallery {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
 }
 
 .display_thumbnail {
-    height: 92px;
-    width: 92px;
+    height: 100px;
+    padding-top: 50%;
+    width: 50%;
 
-    margin-right: 12px;
-    background-color: green;
-}
+    box-sizing: border-box;
 
-#display_gallery :nth-child(n + 4) {
-    margin-top: 12px;
-}
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(255, 255, 255, 0.3);
 
-#display_gallery :nth-child(3n + 3) {
-    margin-right: 0;
+    background-color: red;
 }
 
 #display_footer {
@@ -150,6 +156,7 @@ ul {
 
     .display_clickable {
         margin: 0;
+        max-width: initial;
     }
 
     #display_clickable_inside {
@@ -164,12 +171,12 @@ ul {
         display: none;
     }
 
-    #display_links {
+    .display_links {
         margin-left: 20px;
         margin-right: 20px;
     }
 
-    #display_gallery {
+    .display_gallery {
         margin-left: 20px;
         margin-right: 20px;
     }
@@ -178,5 +185,20 @@ ul {
         display: flex;
         justify-content: center;
         height: 48px;
+    }
+}
+
+@media (max-width: 950px) {
+    #display_title {
+        font-size: 9vw;
+        margin: 0 auto;
+    }
+
+    #display_desc {
+        font-size: 5vw;
+    }
+
+    #display_story {
+        font-size: 4vw;
     }
 }
